Fixing some mobile styles and other small things.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/style.css">
 
-        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
         <link rel="stylesheet" href="css/portfolio.css">
         <link rel="stylesheet" href="css/component.css">
@@ -130,7 +130,7 @@
 
       <div class="second-holder"><h1 class="my-title">Our <s>Children</s> Cats</h1></div>
       <section id="grid" class="grid clearfix smooth-animation">
-        <a class="main" href="http://tympanus.net/Tutorials/ShapeHoverEffectSVG/index2.html#" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
+        <a class="main" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
           <figure>
             <img src="img/1a.png">
             <svg viewBox="0 0 180 400" preserveAspectRatio="none"><path d="M0,0C0,0,0,171.14385,0,171.14385C24.580441,186.61523,55.897012,195.90157,90,195.90157C124.10299,195.90157,155.41956,186.61523,180,171.14385C180,171.14385,180,0,180,0C180,0,0,0,0,0C0,0,0,0,0,0"></path><desc>Created with Snap</desc><defs></defs></svg>
@@ -141,7 +141,7 @@
             </figcaption>
           </figure>
         </a>
-        <a class="main" href="http://tympanus.net/Tutorials/ShapeHoverEffectSVG/index2.html#" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
+        <a class="main" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
           <figure>
             <img src="img/2a.png">
             <svg viewBox="0 0 180 400" preserveAspectRatio="none"><path d="M0,0C0,0,0,171.14385,0,171.14385C24.580441,186.61523,55.897012,195.90157,90,195.90157C124.10299,195.90157,155.41956,186.61523,180,171.14385C180,171.14385,180,0,180,0C180,0,0,0,0,0C0,0,0,0,0,0"></path><desc>Created with Snap</desc><defs></defs></svg>
@@ -153,7 +153,7 @@
             </figcaption>
           </figure>
         </a>
-        <a class="main" href="http://tympanus.net/Tutorials/ShapeHoverEffectSVG/index2.html#" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
+        <a class="main" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
           <figure>
             <img src="img/3a.png">
             <svg viewBox="0 0 180 400" preserveAspectRatio="none"><path d="M0,0C0,0,0,171.14385,0,171.14385C24.580441,186.61523,55.897012,195.90157,90,195.90157C124.10299,195.90157,155.41956,186.61523,180,171.14385C180,171.14385,180,0,180,0C180,0,0,0,0,0C0,0,0,0,0,0"></path><desc>Created with Snap</desc><defs></defs></svg>
