--- a/timeline.html
+++ b/timeline.html
@@ -66,7 +66,12 @@
 
 
 <section class="timeline">
-  <ul>
+  <ul style="overflow: hidden;">
+      <li>
+      <div>
+        <time>December 2017</time> Sign contract for a new construction house.
+      </div>
+    </li>
 
     <li>
       <div>
@@ -123,7 +128,9 @@
         <time>2009</time> First time we met.  Yana messaged Matt on OkCupid.  That's not the actual start of the story, though, as it was not meant-to-be for a little while...
       </div>
     </li>
+      <br><br> <br><br> <br><br>
   </ul>
+
 </section>
 
 
@@ -200,11 +207,15 @@
           // http://stackoverflow.com/questions/123999/how-to-tell-if-a-dom-element-is-visible-in-the-current-viewport
           function isElementInViewport(el) {
             var rect = el.getBoundingClientRect();
+                if (typeof jQuery === "function" && el instanceof jQuery) {
+        el = el[0];
+    }
+            console.log($(window).width());
             return (
               rect.top >= 0 &&
               rect.left >= 0 &&
-              rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
-              rect.right <= (window.innerWidth || document.documentElement.clientWidth)
+              rect.bottom <= ($(window).height()) &&
+              rect.right <= ($(window).width())
             );
           }
 
