Fixed page anchors.

--- a/recipes.html
+++ b/recipes.html
@@ -81,7 +81,7 @@
             <h1>Jalapeño Mashed Potatoes</h1>
           </a>
 
-          <a href="javascript:void(0)" class="grid-item grid-item-rec">
+          <a href="#pizza" class="grid-item grid-item-rec">
             <!--<img src="img/img.png" alt="">-->
             <img src="img/food/pizza-thumb.png" alt="">
             <h1>Homemade Pizza</h1>
