Mobile Style Fixes for larger screens

--- a/index.html
+++ b/index.html
@@ -124,12 +124,14 @@
       </div>
 
       <div class="grid-container">
+
       <div class="kalo">
 
       <div class="my-spacer10"></div>
 
-      <div class="second-holder"><h1 class="my-title">Our <s>Children</s> Cats</h1></div>
+      
       <section id="grid" class="grid clearfix smooth-animation">
+      <div class="second-holder cats"><h1 class="my-title">Our <s>Children</s> Cats</h1></div>
         <a class="main" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
           <figure>
             <img src="img/1a.png">
