Added new recipe.

--- a/recipes.html
+++ b/recipes.html
@@ -87,6 +87,11 @@
             <h1>Homemade Pizza</h1>
             <!--<p>Photo coming soon!</p>-->
           </a>
+
+          <a href="#pasta" class="grid-item grid-item-rec grid-item-image">
+            <img src="img/food/pasta_thumb.png" alt="">
+            <h1>THE Pasta</h1>
+          </a>
           <!--<a href="javascript:void(0)" class="grid-item">
             <img src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_2.png" alt="">
             <h1>Last Grid Item</h1>
@@ -325,8 +330,89 @@
         </div>
       </div>
 
+
+
+ <div class="my-spacer10"></div>
+        <a name="pasta"></a>
+        <hr>
+
+        <div class="my-spacer10"></div>
+
+        <div class="recipe">
+        <div class="second-holder"><h1 class="my-title">THE Pasta</h1> <span class="recipe-date">Posted January 31, 2017</span></div>
+
+        <div class="recipe-card">
+        <div class="card-heading"><h3><i class="fa fa-info-circle fa-1x" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;About the Recipe</h3></div>
+        <center><div class="recipe-img" style="background-image: url('img/food/pasta_thumb.png')"></center>
+          <div class="quadrant"><span class="quad-cat">PREP TIME:</span><br>10 Minutes</div>
+          <div class="quadrant"><span class="quad-cat">DIFFICULTY:</span><br>Easy</div>
+          <div class="quadrant"><span class="quad-cat">COOK TIME:</span><br>20 Minutes</div>
+          <div class="quadrant"><span class="quad-cat">YIELD:</span><br>Serves 4</div>
+          <center><div class="attrib"><i>Adapted from <a href='http://www.kevinandamanda.com/spicy-sausage-pasta/' target="_blank">this recipe that is not mine.</a></i></p></center>
+        <!--<div class="card-sub-heading"><h3><i class="fa fa-cogs fa-1x"></i>&nbsp;&nbsp;&nbsp;Nutrition</h3></div>
+        <div class="nutrition"><br>
+        Amount Per Serving:<br>
+        Calories: 500<br>
+        Total Fat: 2g<br>
+        Saturated Fat: 3g<br>
+        Cholesterol: 70mg<br>
+        Sodium: 900mg<br>
+        Carbohydrates: 47g<br>
+        Fiber: 4g<br>
+        Sugar: 5g<br>
+        Protein: 30g<br>
+        </div>-->
+        </div>
+        <div class="recipe-body">
+          If you can't tell, I'm pretty big on carbs, cheese, and similar deliciousness.  So you know it's a great honor when we refer to this recipe as <i>THE</i> Pasta.  The one Pasta to rule them all, if you will.  This pasta is basically the reason I was thinking about posting nutrition information for these recipes, but decided "nah."
+        <br><br>
+
+        <div class="rec-body-header"><i class="fa fa-list fa-1x"></i>&nbsp;&nbsp;&nbsp;Ingredients</h3></div>
+        <ul class="ingredient-list">
+          <li> 1 pound smoked turkey sausage</li>
+          <li> 1 white onion, diced</li>
+          <li> 1 cup thinly sliced green onions</li>
+          <li> 1 tablespoon minced garlic</li>
+          <li> 2 ¼ cups chicken broth</li>
+          <li> 1/2 cup heavy cream</li>
+          <li> 2 cups Monterey Jack cheese, shredded</li>
+          <li> 1 (10oz) can Ro-Tel tomatoes and green chiles, Hot</li>
+          <li> 12 oz Campanelle pasta</li>
+          <li> 1/2 teaspoon salt and pepper, each</li>
+          <li> 1/2 teaspoon garlic powder</li>
+          <li> 1/4 teaspoon cayenne pepper</li>
+          <li> 1 tablespoon olive oil</li>
+        </ul><br>
+        <div class="rec-body-header"><i class="fa fa-fire fa-1x"></i>&nbsp;&nbsp;&nbsp;Directions</h3></div>
+         <ol class="directions-list">
+         <li>Add olive oil to a large oven-safe skillet over medium high heat.  Add sausage and cook until nicely browned.</li>
+         <li>Add white onion and continue cooking until they start to caramelize.  Add garlic and cook for 1 more minute.</li>
+         <li>Add broth, Ro-Tel, cream, pasta, and seasonings.  Stir everything together.  Bring to a boil, cover skillet, and reduce to medium-low heat.</li>
+         <li>Simmer for approximately 15 minutes, stirring every 5 minutes.</li>
+         <li>When pasta is sufficiently tender, mix in 1 cup of cheese.</li>
+         <li>Top with remaining cup of cheese, and green onions.</li>
+         <li>Broil for 2-5 minutes, until the cheese melts.</li>
+         
+         </ol>
+
+         <div class="recipe-photos">
+         <div id="elastic_grid_demo">
+          <center>
+<a href="img/food/pasta1.png" data-lightbox="image-1" data-title="About to be covered with a lid.  I love recipes where I can just throw in uncooked pasta and magic happens."><img src="img/food/pasta1-thumb.png" class="photo-thumb-food"></a>
+
+<a href="img/food/pasta2.png" data-lightbox="image-1" data-title="After being broiled.  Time to dig in!"><img src="img/food/pasta2_thumb.png" class="photo-thumb-food"></a>
+
+<a href="img/food/pasta3.png" data-lightbox="image-1" data-title="Action shot!"><img src="img/food/pasta3-thumb.png" class="photo-thumb-food"></a>
+
+    </center>
+        </div>
+        </div>
+
+        </div>
       </div>
-</div>
+
+      </div>
+      </div>
 
 
         <!-- footer -->
